force-app/main/default/objects/BidManagement__c/fields/SBU__c.field-meta.xml
<CustomField>
    <fullName>SBU__c</fullName>
    <label>SBU</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>上水</fullName>
            </value>
            <value>
                <fullName>下水</fullName>
            </value>
            <value>
                <fullName>オゾン</fullName>
            </value>
            <value>
                <fullName>受変電</fullName>
            </value>
            <value>
                <fullName>自家発</fullName>
            </value>
            <value>
                <fullName>UPS</fullName>
            </value>
            <value>
                <fullName>映像</fullName>
            </value>
            <value>
                <fullName>ビルシ</fullName>
            </value>
            <value>
                <fullName>PVスマエネ</fullName>
            </value>
            <value>
                <fullName>施設その他</fullName>
            </value>
            <value>
                <fullName>建設防災</fullName>
            </value>
            <value>
                <fullName>有料道路</fullName>
            </value>
            <value>
                <fullName>警察海保</fullName>
            </value>
            <value>
                <fullName>運輸</fullName>
            </value>
            <value>
                <fullName>中央</fullName>
            </value>
            <value>
                <fullName>アクセス・ホーム</fullName>
            </value>
            <value>
                <fullName>コアメトロ</fullName>
            </value>
            <value>
                <fullName>衛星</fullName>
            </value>
            <value>
                <fullName>ソリューション</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>