force-app/main/default/objects/BidManagement__c/fields/SubmitDate__c.field-meta.xml
<CustomField>
    <fullName>SubmitDate__c</fullName>
    <label>提出日時（年月日）</label>
    <type>Date</type>
</CustomField>