force-app/main/default/objects/BidManagement__c/fields/SubmitTime__c.field-meta.xml
<CustomField>
    <fullName>SubmitTime__c</fullName>
    <label>提出日時（時 分）</label>
    <type>Time</type>
</CustomField>