force-app/main/default/objects/BidManagement__c/fields/SuccessfulBidder__c.field-meta.xml
<CustomField>
    <fullName>SuccessfulBidder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>落札者</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>事業所</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>入札 (落札者)</relationshipLabel>
    <relationshipName>SuccessfulBidder</relationshipName>
    <type>Lookup</type>
</CustomField>