force-app/main/default/objects/BidManagement__c/fields/SuccessfulBidderManual__c.field-meta.xml
<CustomField>
    <fullName>SuccessfulBidderManual__c</fullName>
    <label>落札者（手入力）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>