force-app/main/default/objects/BidManagement__c/fields/SuccessfulBidderName__c.field-meta.xml
<CustomField>
    <fullName>SuccessfulBidderName__c</fullName>
    <formula>SuccessfulBidder__r.Name</formula>
    <label>落札者</label>
    <type>Text</type>
</CustomField>