force-app/main/default/objects/BidManagement__c/fields/SupplySite__c.field-meta.xml
<CustomField>
    <fullName>SupplySite__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>納入サイト</label>
    <referenceTo>SupplySite__c</referenceTo>
    <relationshipLabel>入札</relationshipLabel>
    <relationshipName>SupplySiteBidManagements</relationshipName>
    <type>Lookup</type>
</CustomField>