force-app/main/default/objects/BidManagement__c/fields/SurveyStandardPriceErrorRate__c.field-meta.xml
<CustomField>
    <fullName>SurveyStandardPriceErrorRate__c</fullName>
    <formula>ABS(1 - (EstimatedSurveyStandardPrice__c / PublishedSurveyStandardPrice__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>調査基準価格　誤差率</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>