force-app/main/default/objects/BidManagement__c/fields/SurveyStandardRatio__c.field-meta.xml
<CustomField>
    <fullName>SurveyStandardRatio__c</fullName>
    <description>調査基準価格÷予定価格（公表価格or推定価格）　※公表を優先</description>
    <formula>IF (
  OR( ISBLANK(PublishedEstimatePrice__c), ISNULL(PublishedEstimatePrice__c) ),
  EstimatedSurveyStandardPrice__c / EstimatedPresumptionPrice__c, 
  PublishedSurveyStandardPrice__c / PublishedEstimatePrice__c
 )</formula>
    <label>調査基準比率</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>