force-app/main/default/objects/BidManagement__c/fields/TenderEntryCertified__c.field-meta.xml
<CustomField>
    <fullName>TenderEntryCertified__c</fullName>
    <label>入札参加資格</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>電機メーカー</fullName>
            </value>
            <value>
                <fullName>代理店・関係会社</fullName>
            </value>
            <value>
                <fullName>地元工事業者</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>