force-app/main/default/objects/BidManagement__c/fields/TenderEntryCertifiedRemark__c.field-meta.xml
<CustomField>
    <fullName>TenderEntryCertifiedRemark__c</fullName>
    <label>入札参加資格　備考</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>