force-app/main/default/objects/BidManagement__c/fields/TenderType__c.field-meta.xml
<CustomField>
    <fullName>TenderType__c</fullName>
    <label>入札形態</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>単独</fullName>
            </value>
            <value>
                <fullName>JV</fullName>
            </value>
            <value>
                <fullName>代理</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>