force-app/main/default/objects/BidManagement__c/fields/WaterBUPumpStationCategory__c.field-meta.xml
<CustomField>
    <fullName>WaterBUPumpStationCategory__c</fullName>
    <formula>TEXT(PumpStation__r.WaterSupplyOnboardCategory__c )</formula>
    <inlineHelpText>水環境BU機場カテゴリの定義
・カテゴリA：中央監視設備と中央監視設備以外の設備を一つ以上納入している機場
・カテゴリB：中央監視設備のみ、又は中央監視設備以外の設備を一つ以上納入している機場
・カテゴリC：新設・他社機場</inlineHelpText>
    <label>水環境BU機場カテゴリ</label>
    <type>Text</type>
</CustomField>