force-app/main/default/objects/BidManagement__c/fields/WC__c.field-meta.xml
<CustomField>
    <fullName>WC__c</fullName>
    <label>ＷＣ</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>