force-app/main/default/objects/BidManagement__c/fields/WCRate__c.field-meta.xml
<CustomField>
    <fullName>WCRate__c</fullName>
    <description>ＷＣ/当社応札金額</description>
    <formula>WC__c /  CompanyBidAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WC率</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>