force-app/main/default/objects/BidManagement__c/fields/WCRateForWinBid__c.field-meta.xml
<CustomField>
    <fullName>WCRateForWinBid__c</fullName>
    <description>ＷＣ/落札金額</description>
    <formula>WC__c /  BidAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>対落札金額WC率</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>