force-app/main/default/objects/BidManagement__c/fields/WCSummary__c.field-meta.xml
<CustomField>
    <fullName>WCSummary__c</fullName>
    <label>ＷＣ概要</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>確定（手配先と原低交渉後WC）</fullName>
            </value>
            <value>
                <fullName>標準（手配先の1次回答WC）</fullName>
            </value>
            <value>
                <fullName>概算（事管推整備の標準WC等）</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>