force-app/main/default/objects/BidManagement__c/fields/WinBidRate__c.field-meta.xml
<CustomField>
    <fullName>WinBidRate__c</fullName>
    <description>落札金額÷予定価格（公表価格or推定価格）　※公表を優先</description>
    <formula>IF ( 
 OR( ISBLANK(PublishedEstimatePrice__c), ISNULL(PublishedEstimatePrice__c) ), 
 BidAmount__c / EstimatedPresumptionPrice__c, 
 BidAmount__c / PublishedEstimatePrice__c 
)</formula>
    <label>落札率</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>