force-app/main/default/objects/BidManagement__c/validationRules/EstablishedCompany.validationRule-meta.xml
<ValidationRule>
    <fullName>EstablishedCompany</fullName>
    <active>true</active>
    <description>工事区分が「新設」以外の場合、「既設社」は入力必須です</description>
    <errorConditionFormula>AND(
  NOT(ISPICKVAL(ConstructionDistinction__c , &quot;&quot;)),
  NOT(ISPICKVAL(ConstructionDistinction__c , &quot;新設&quot;)),
  ISPICKVAL( EstablishedCompany__c, &quot;&quot; ),
  NOT($Profile.Name = &apos;データ移行管理者&apos;)
)</errorConditionFormula>
    <errorMessage>工事区分が「新設」以外の場合、「既設社」は入力必須です【EstablishedCompany】</errorMessage>
</ValidationRule>