force-app/main/default/objects/BidManagement__c/validationRules/PropertyBUCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>PropertyBUCheck</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL( Opportunity__r.BU__c , &apos;施設&apos;) ,
    ISBLANK( Property__c ),
    NOT($Profile.Name = &apos;データ移行管理者&apos;)
)</errorConditionFormula>
    <errorDisplayField>Property__c</errorDisplayField>
    <errorMessage>案件のBUが施設の場合、物件は必須です。</errorMessage>
</ValidationRule>