force-app/main/default/objects/BidManagement__c/validationRules/PropertyBUCheck2.validationRule-meta.xml
<ValidationRule>
    <fullName>PropertyBUCheck2</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL( Opportunity__r.BU__c , &apos;水環境&apos;) ,
    ISBLANK(PumpStation__c),
    NOT($Profile.Name = &apos;データ移行管理者&apos;)
)</errorConditionFormula>
    <errorDisplayField>PumpStation__c</errorDisplayField>
    <errorMessage>案件のBUが水施設の場合、機場は必須です。</errorMessage>
</ValidationRule>