force-app/main/default/objects/BidManagement__c/validationRules/PropertyBUCheck3.validationRule-meta.xml
<ValidationRule>
    <fullName>PropertyBUCheck3</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(
ISPICKVAL(SBU__c, &apos;受変電&apos;) ,
ISPICKVAL(SBU__c, &apos;自家発&apos;) ,
ISPICKVAL(SBU__c, &apos;UPS&apos;) ,
ISPICKVAL(SBU__c, &apos;映像&apos;) ,
ISPICKVAL(SBU__c, &apos;ビルシ&apos;) ,
ISPICKVAL(SBU__c, &apos;PVスマエネ&apos;) ,
ISPICKVAL(SBU__c, &apos;施設その他&apos;) 
),
ISBLANK( TEXT(Type__c) ) ,
NOT($Profile.Name = &apos;データ移行管理者&apos;)
)</errorConditionFormula>
    <errorDisplayField>Type__c</errorDisplayField>
    <errorMessage>SBUが受変電、自家発、UPS、映像、ビルシ、PVスマエネ、施設その他の場合、新築／既築区分は必須です。</errorMessage>
</ValidationRule>