force-app/main/default/objects/BidManagement__c/validationRules/PropertyBUCheck4.validationRule-meta.xml
<ValidationRule>
    <fullName>PropertyBUCheck4</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL( Opportunity__r.BU__c , &apos;官需&apos;) ,
    ISBLANK(  SupplySite__c ),
    NOT($Profile.Name = &apos;データ移行管理者&apos;)
)</errorConditionFormula>
    <errorDisplayField>SupplySite__c</errorDisplayField>
    <errorMessage>案件のBUが官需の場合、納入サイトは必須です。</errorMessage>
</ValidationRule>