force-app/main/default/objects/BidManagement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PickDivision__c</columns>
    <columns>SBU__c</columns>
    <columns>PumpStation__c</columns>
    <columns>Opportunity__c</columns>
    <columns>LastCustomer__c</columns>
    <columns>SubmitDate__c</columns>
    <columns>BidOpenDate__c</columns>
    <columns>SuccessfulBidder__c</columns>
    <columns>BidAmount__c</columns>
    <columns>CompanyBidAmount__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>