force-app/main/default/objects/BidManagement__c/listViews/BUkanju.listView-meta.xml
<ListView>
    <fullName>BUkanju</fullName>
    <columns>NAME</columns>
    <columns>PickDivision__c</columns>
    <columns>SBU__c</columns>
    <columns>PumpStation__c</columns>
    <columns>Opportunity__c</columns>
    <columns>LastCustomer__c</columns>
    <columns>SubmitDate__c</columns>
    <columns>BidOpenDate__c</columns>
    <columns>SuccessfulBidder__c</columns>
    <columns>BidAmount__c</columns>
    <columns>CompanyBidAmount__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SBU__c</field>
        <operation>equals</operation>
        <value>建設防災,有料道路,警察海保</value>
    </filters>
    <filters>
        <field>Opportunity__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>notContain</operation>
        <value>テラスカイ</value>
    </filters>
    <label>官需BUの入札（社環計殿のみ閲覧可）</label>
    <sharedTo>
        <role>M01511_syakaisystem2bu_kikaku_MEN</role>
        <role>M0151_syakaisystem2bu_kikaku_MG</role>
        <role>M01521_syakaisystem2bu_kensetsu_MEN</role>
        <role>M0152_syakaisystem2bu_kensetsu_MG</role>
        <roleAndSubordinatesInternal>M0121_kikakuka_MG</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>