force-app/main/default/objects/BidManagement__c/listViews/tyubushi_shasiichi.listView-meta.xml
<ListView>
    <fullName>tyubushi_shasiichi</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PickDivision__c</field>
        <operation>equals</operation>
        <value>中部支　社シ一</value>
    </filters>
    <label>中部支・社シ一</label>
    <sharedTo>
        <role>M05131_shakaisystemdaiikka_MEN</role>
    </sharedTo>
</ListView>