force-app/main/default/objects/BidManagement__c/listViews/X102.listView-meta.xml
<ListView>
    <fullName>X102</fullName>
    <columns>NAME</columns>
    <columns>PickDivision__c</columns>
    <columns>SBU__c</columns>
    <columns>PumpStation__c</columns>
    <columns>Opportunity__c</columns>
    <columns>LastCustomer__c</columns>
    <columns>SubmitDate__c</columns>
    <columns>BidOpenDate__c</columns>
    <columns>SuccessfulBidder__c</columns>
    <columns>BidAmount__c</columns>
    <columns>CompanyBidAmount__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PickDivision__c</field>
        <operation>equals</operation>
        <value>本社　社シ二,本社　社シ二・企政,本社　社シ二・建防,本社　社シ二・道路,本社　社シ二・S監</value>
    </filters>
    <label>10-2.本社・社シ二部の入札</label>
</ListView>