force-app/main/default/objects/BidManagement__c/listViews/X103.listView-meta.xml
<ListView>
    <fullName>X103</fullName>
    <columns>NAME</columns>
    <columns>PickDivision__c</columns>
    <columns>SBU__c</columns>
    <columns>PumpStation__c</columns>
    <columns>Opportunity__c</columns>
    <columns>LastCustomer__c</columns>
    <columns>SubmitDate__c</columns>
    <columns>BidOpenDate__c</columns>
    <columns>SuccessfulBidder__c</columns>
    <columns>BidAmount__c</columns>
    <columns>CompanyBidAmount__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>TenderType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PickDivision__c</field>
        <operation>equals</operation>
        <value>本社　施設,本社　施設・一,本社　施設・二,本社　施設・三,本社　施設・DCG,本社　施設・販企</value>
    </filters>
    <label>10-4.本社・施設部の入札</label>
</ListView>