force-app/main/default/objects/BidManagement__c/listViews/X1030.listView-meta.xml
<ListView>
    <fullName>X1030</fullName>
    <columns>NAME</columns>
    <columns>PickDivision__c</columns>
    <columns>SBU__c</columns>
    <columns>PumpStation__c</columns>
    <columns>Opportunity__c</columns>
    <columns>LastCustomer__c</columns>
    <columns>SubmitDate__c</columns>
    <columns>BidOpenDate__c</columns>
    <columns>SuccessfulBidder__c</columns>
    <columns>BidAmount__c</columns>
    <columns>CompanyBidAmount__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PickDivision__c</field>
        <operation>equals</operation>
        <value>本社　官公,本社　官公・一,本社　官公・二</value>
    </filters>
    <label>10-3.本社・官公部の入札</label>
</ListView>