force-app/main/default/objects/BidManagement__c/listViews/X13.listView-meta.xml
<ListView>
    <fullName>X13</fullName>
    <columns>NAME</columns>
    <columns>PickDivision__c</columns>
    <columns>SBU__c</columns>
    <columns>PumpStation__c</columns>
    <columns>Opportunity__c</columns>
    <columns>LastCustomer__c</columns>
    <columns>SubmitDate__c</columns>
    <columns>BidOpenDate__c</columns>
    <columns>SuccessfulBidder__c</columns>
    <columns>BidAmount__c</columns>
    <columns>CompanyBidAmount__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PickDivision__c</field>
        <operation>contains</operation>
        <value>関越支　社会シ,関越支　社会シ一,関越支　社会シ二,関越支　社会シ三</value>
    </filters>
    <label>13.関越支社の入札</label>
</ListView>