force-app/main/default/objects/BidManagement__c/listViews/X16.listView-meta.xml
<ListView>
    <fullName>X16</fullName>
    <columns>NAME</columns>
    <columns>PickDivision__c</columns>
    <columns>SBU__c</columns>
    <columns>PumpStation__c</columns>
    <columns>Opportunity__c</columns>
    <columns>LastCustomer__c</columns>
    <columns>SubmitDate__c</columns>
    <columns>BidOpenDate__c</columns>
    <columns>SuccessfulBidder__c</columns>
    <columns>BidAmount__c</columns>
    <columns>CompanyBidAmount__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PickDivision__c</field>
        <operation>contains</operation>
        <value>中部支　社会シ,中部支　社シ企,中部支　社シ一,中部支　社シ二,中部支　社シ三,中部支　社シ四</value>
    </filters>
    <label>16.中部支社の入札</label>
</ListView>