force-app/main/default/objects/BidManagement__c/listViews/X17.listView-meta.xml
<ListView>
    <fullName>X17</fullName>
    <columns>NAME</columns>
    <columns>PickDivision__c</columns>
    <columns>SBU__c</columns>
    <columns>PumpStation__c</columns>
    <columns>Opportunity__c</columns>
    <columns>LastCustomer__c</columns>
    <columns>SubmitDate__c</columns>
    <columns>BidOpenDate__c</columns>
    <columns>SuccessfulBidder__c</columns>
    <columns>BidAmount__c</columns>
    <columns>CompanyBidAmount__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PickDivision__c</field>
        <operation>equals</operation>
        <value>西支　社シ,西支　社シ一,西支　社シ二,西支　社シ三,西支　社シ四,西支　京社シ,西支　兵社シ</value>
    </filters>
    <label>17.関西支社の入札</label>
</ListView>